--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "cy2": "^4.0.9",
     "lodash": "4.17.20",
+    "express": "^4.15.0",
     "hot-formula-parser": "3.0.0"
   }
 }
