--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
-    "cy2": "^4.0.9",
-    "lodash": "4.17.20",
+    "cy2": "^4.0.0",
     "express": "^4.15.0",
-    "hot-formula-parser": "3.0.0"
+    "hot-formula-parser": "^3.0.2",
+    "lodash": "^4.17.21"
   }
 }
