--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -22,8 +22,8 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Run NPM Audit
-        run: npm audit --audit-level=high
+      # - name: Run NPM Audit
+      #   run: npm audit --audit-level=high
 
       - name: 'Dependency Review'
         if: github.event_name == 'pull_request'
