--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "dependencies": {
     "cy2": "^4.0.9",
-    "hot-formula-parser": "3.0.0"
+    "hot-formula-parser": "3.0.0",
+    "react-server-dom-webpack": "^19.2.0"
   }
 }
