--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -27,4 +27,4 @@ jobs:
         uses: actions/dependency-review-action@v4
         with:
           fail-on-severity: high
-          allow-licenses: MIT, ISC, BSD-3-Clause, CC0-1.0, Apache-2.0, BSD-2-Clause
+          allow-licenses: MIT, ISC, BSD-3-Clause, CC0-1.0, Apache-2.0, BSD-2-Clause, CC-BY-4.0
